// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GenreChip > should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="cursor-default"
        data-state="closed"
      >
        <div
          class="relative -z-10 w-max overflow-hidden rounded-xl bg-primary"
        >
          <div
            class="block whitespace-nowrap p-2 text-primary-foreground/80"
          >
            Black Metal
          </div>
        </div>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="cursor-default"
      data-state="closed"
    >
      <div
        class="relative -z-10 w-max overflow-hidden rounded-xl bg-primary"
      >
        <div
          class="block whitespace-nowrap p-2 text-primary-foreground/80"
        >
          Black Metal
        </div>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GenreChip > should match snapshot with custom className 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="cursor-default"
        data-state="closed"
      >
        <div
          class="relative -z-10 w-max overflow-hidden rounded-xl bg-neutral-800"
        >
          <div
            class="block whitespace-nowrap p-2 text-primary-foreground/80"
          >
            Black Metal
          </div>
        </div>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="cursor-default"
      data-state="closed"
    >
      <div
        class="relative -z-10 w-max overflow-hidden rounded-xl bg-neutral-800"
      >
        <div
          class="block whitespace-nowrap p-2 text-primary-foreground/80"
        >
          Black Metal
        </div>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GenreChip > should match snapshot with playTime 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="cursor-pointer"
        data-state="closed"
      >
        <div
          class="relative -z-10 w-max overflow-hidden rounded-xl bg-primary"
        >
          <div
            class="absolute -left-[8px] -z-10 h-full -skew-x-12 bg-neutral-700 transition-all duration-700 ease-in-out"
            style="width: calc(0% + 10px);"
          />
          <div
            class="block whitespace-nowrap p-2 text-primary-foreground/80"
          >
            Black Metal
          </div>
        </div>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="cursor-pointer"
      data-state="closed"
    >
      <div
        class="relative -z-10 w-max overflow-hidden rounded-xl bg-primary"
      >
        <div
          class="absolute -left-[8px] -z-10 h-full -skew-x-12 bg-neutral-700 transition-all duration-700 ease-in-out"
          style="width: calc(0% + 10px);"
        />
        <div
          class="block whitespace-nowrap p-2 text-primary-foreground/80"
        >
          Black Metal
        </div>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GenreChip > should match snapshot with plays 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="cursor-pointer"
        data-state="closed"
      >
        <div
          class="relative -z-10 w-max overflow-hidden rounded-xl bg-primary"
        >
          <div
            class="absolute -left-[8px] -z-10 h-full -skew-x-12 bg-neutral-700 transition-all duration-700 ease-in-out"
            style="width: calc(0% + 10px);"
          />
          <div
            class="block whitespace-nowrap p-2 text-primary-foreground/80"
          >
            Black Metal
          </div>
        </div>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="cursor-pointer"
      data-state="closed"
    >
      <div
        class="relative -z-10 w-max overflow-hidden rounded-xl bg-primary"
      >
        <div
          class="absolute -left-[8px] -z-10 h-full -skew-x-12 bg-neutral-700 transition-all duration-700 ease-in-out"
          style="width: calc(0% + 10px);"
        />
        <div
          class="block whitespace-nowrap p-2 text-primary-foreground/80"
        >
          Black Metal
        </div>
      </div>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
